# cookie-cart

./: .editorconfig  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  manage.py  pyproject.toml  setup.cfg
backend/docker/django/: Dockerfile
backend/fixtures/: dev_users.json
backend/server/: api_urls.py  urls.py
backend/server/apps/cart/: admin.py  constants.py  types.py  urls.py
backend/server/apps/cart/entities/: __init__.py  item.py
backend/server/apps/cart/migrations/: 0001_initial.py
backend/server/apps/cart/models/: __init__.py  cart.py  item.py
backend/server/apps/cart/serializers/: __init__.py  item.py
backend/server/apps/cart/services/: __init__.py  cart.py  item.py
backend/server/apps/cart/views/: __init__.py  item.py
backend/server/settings/: __init__.py  swagger.py
backend/server/settings/components/: common.py  drf.py
backend/server/settings/environments/: development.py
backend/tests/: conftest.py  factories.py
backend/tests/test_server/: test_urls.py
backend/tests/test_server/test_apps/test_cart/: fixtures.py  test_models.py
backend/tests/test_server/test_apps/test_cart/test_services/: test_cart.py  test_item.py
backend/tests/test_server/test_apps/test_cart/test_views/: test_item.py
config/: .env.template
