[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cookie-cart"
version = "0.1.0"
description = "Simple app for adding items to cookie cart"
authors = ["Mateusz Slisz"]

[tool.poetry.dependencies]
python = "3.8.5"
ipython = "^7.18"
psycopg2 = "^2.8"
python-decouple = "^3.3"

# TODO: remove after https://github.com/python-poetry/poetry/issues/2042
importlib-metadata = "<1.2.0,>=1.1.3"

django = "^2.2" # LTS: in future --> 3.2
djangorestframework = "^3.11"
drf-yasg = "^1.17"
django-extensions = "^3.0"
django-health-check = "^3.12"
split-settings = "^1.0"
bcrypt = "^3.2"

pytest = "^6.0"
pytest-django = "^3.9"
pytest-cov = "^2.10"
coverage = "^5.2"
factory_boy = "^3.0"
django-coverage-plugin = "^1.8"


wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.2"
flake8-django = "^0.0.4"
flake8-logging-format = "^0.6.0"
nitpick = "^0.22"
black = "^20.8b1"
mypy = "^0.770"


[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
